# course_work_4

./: README.md  pyproject.toml
classes/: abstr_class.py  hh_api_class.py  saver_class.py  superjob_api_class.py  vacancies_class.py
data/: example.json
src/: main.py  utils.py
